--- a/llhttp-sys/Cargo.toml
+++ b/llhttp-sys/Cargo.toml
@@ -16,4 +16,8 @@ log = "0.4"
 env_logger = "0.7"
 pkg-config = "0.3"
 
-bindgen = { version = "0.54.0" }
+bindgen = { version = "0.54.1" }
+
+[features]
+static = []
+dynamic = []
