--- a/llhttp-sys/Cargo.toml
+++ b/llhttp-sys/Cargo.toml
@@ -12,12 +12,12 @@ doctest=false
 [dependencies]
 
 [build-dependencies]
-anyhow = "1.0.32"
+anyhow = "1.0"
 log = "0.4"
-env_logger = "0.7"
+env_logger = "0.8"
 pkg-config = "0.3"
 
-bindgen = { version = "^0.55.1" }
+bindgen = { version = "0.55" }
 
 [features]
 static = []
