--- a/llhttp-sys/Cargo.toml
+++ b/llhttp-sys/Cargo.toml
@@ -10,14 +10,15 @@ keywords = ["http", "nodejs", "llhttp"]
 doctest=false
 
 [dependencies]
+libc = "0.2"
 
 [build-dependencies]
 anyhow = "1.0"
-log = "0.4"
+bindgen = { version = "0.56", optional = true }
 env_logger = "0.8"
+log = "0.4"
 pkg-config = "0.3"
-
-bindgen = { version = "0.56" }
 
 [features]
 static = []
+gen = [ "bindgen" ]
