--- a/llhttp/Cargo.toml
+++ b/llhttp/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 enum-primitive-derive = "0.2"
+libc = "0.2"
 num-traits = "0.2"
 
 llhttp-sys = {version = "0.0.1", path = "../llhttp-sys"}
